Internal filter menu behavior, researched bug on Safari.

--- a/sass/main.css.nested.css
+++ b/sass/main.css.nested.css
@@ -63,15 +63,17 @@
     padding: 0; }
 
 .checks md-icon.ng-isolate-scope {
-  width: 32px;
+  width: 24px;
   height: 24px;
-  position: absolute;
-  pointer-events: none;
+  position: relative;
   padding-top: 12px;
-  left: -12px; }
+  left: 12px; }
 
-.checks button {
-  padding-left: 48px; }
+._md-open-menu-container {
+  margin-top: -100px;
+  margin-left: -200px; }
+  ._md-open-menu-container md-menu-content {
+    max-height: 600px; }
 
 .truncate {
   overflow: hidden;
@@ -83,8 +85,9 @@
   box-shadow: none;
   border-left: 3px solid #d53b3b;
   min-height: 90px; }
-  .table-list > * {
-    margin-right: 16px; }
+  .table-list > div {
+    margin-right: 16px;
+    min-height: 80px; }
   @media screen and (max-width: 960px) {
     .table-list {
       border-left: 6px solid #d53b3b;
