--- a/sass/main.css.scss
+++ b/sass/main.css.scss
@@ -30,13 +30,20 @@
     >md-list >md-list-item {padding-left: 48px;}
     md-list{padding: 0;}
     md-menu-bar{padding: 0}
-  .savefilter{}
   }
 }
 .checks{
- md-icon.ng-isolate-scope{ width: 32px; height: 24px; position: absolute; pointer-events: none; padding-top: 12px; left: -12px;}
-button{padding-left: 48px;}
+ md-icon.ng-isolate-scope{ width: 24px; height: 24px; position: relative; padding-top: 12px; left: 12px;}
+
 }
+
+  ._md-open-menu-container{
+    margin-top: -100px;
+    margin-left: -200px;
+    md-menu-content{
+      max-height: 600px;
+    }
+  }
 
 .truncate{
   overflow: hidden; text-overflow: ellipsis;
@@ -48,7 +55,7 @@ button{padding-left: 48px;}
   box-shadow: none;
   border-left: 3px solid #d53b3b;
   min-height: 90px;
-  > *{margin-right: 16px;}
+  > div{margin-right: 16px; min-height: 80px;}
   @media screen and (max-width: 960px){ border-left: 6px solid #d53b3b; margin-bottom: 24px; padding-left: 48px;}
   @media screen and (max-width: 600px){ border-left: 0; border-top: 5px solid #d53b3b; margin-bottom: 24px; padding-left: 36px;}
   &:nth-of-type(2){border-left: 3px solid transparent;}
